# DSA-Journey

./: .gitignore  README.md
0. Practice/: 01_digits.h  02_armstrong.h  03_divisor.h  04_prime.h  05_gcd_hcf.h  06_recursion.h  07_Remove_Element.h  08_plus_one.h  09_fair_pairs.h  10_merge.h  11_Contains_Duplicate.h  12_MedianOfSorted.h  main.cpp
0. vs/: containsNearbyAlmostDuplicate.cpp  containsNearbyDuplicate.cpp  romanToInt.cpp
1. Pattern/: Driver.java  db.txt
10. Linked list/: CMakeLists.txt  L1_basic.h  L2_doublyLL.h  main.cpp
11. Matrix/: CMakeLists.txt  main.cpp
2. STL/: CMakeLists.txt  main.cpp
3. Basic maths C++/: .autocp  CMakeLists.txt  main.cpp
4. Recursion/: .autocp  CMakeLists.txt  Sins.h  main.cpp
5. Hashing/: .autocp  CMakeLists.txt  input.txt  main.cpp
6. Sorting/: Bubble.h  CMakeLists.txt  Insertion.h  Merge.h  Quick.h  Selection.h  main.cpp
7. Array/: CMakeLists.txt  linearSearch.h  main.cpp  maxConsecutiveOnes.h  (+39 more)
8. Binary Search/: .gitignore  B10_findPeakElement.h  B11_floorSqrt.h  B12_kokoEating.h  B13_minDays.h  B14_smallestDivisor.h  B15_shipWithinDays.h  B16_findKthPositive.h  B17_aggressiveCows.h  B18_findMin.h  B19_findPages.h  B1_binarySearch.h  B20_splitArray.h  B21_minimiseMaxDistance.h  B22_findMedianSortedArrays.h  B23_kthElement.h  B24_rowWithMax1s.h  B24_searchMatrix.h  B25_findPeakGrid.h  B25_searchMatrix.h  B26_intersect.h  B27_arrangeCoins.h  B28_nextGreatestLetter.h  B2_lowerBound.h  B3_upperBound.h  B4_floor.h  B5_ceil.h  B6_countFreq.h  B7_Floor2.h  B8_search.h  B9_singleNonDuplicate.h  CMakeLists.txt  main.cpp
(+7 files in other folders)
