cmake_minimum_required(VERSION 3.28)
project(8__Binary_Search)

set(CMAKE_CXX_STANDARD 17)

add_executable(8__Binary_Search main.cpp
        B1_binarySearch.h
        B2_lowerBound.h
        B3_upperBound.h
        B4_floor.h
        B5_ceil.h
        B6_countFreq.h
        B7_Floor2.h
        B8_search.h
        B9_singleNonDuplicate.h
        B10_findPeakElement.h
        B11_floorSqrt.h
        B12_kokoEating.h
        B13_minDays.h
        B14_smallestDivisor.h
        B15_shipWithinDays.h
        B16_findKthPositive.h
        B17_aggressiveCows.h
        B18_findMin.h
        B19_findPages.h
        B20_splitArray.h)
